k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dfac-worker
  labels:
    app: dfac-worker
spec:
  replicas: 5
  selector:
    matchLabels:
      app: dfac-worker
  template:
    metadata:
      labels:
        app: dfac-worker
    spec:
      containers:
      - name: dfac-worker
        image: dfac-worker:latest
        imagePullPolicy: IfNotPresent
